Adding react components.

--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -12,14 +12,10 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :charity %>
-    <%= form.text_field :charity %>
-  </div>
-
-  <div class="field">
     <%= form.label :amount %>
     <%= form.text_field :amount %>
   </div>
+  <%= react_component("CharitySelector") %>
 
   <div class="actions">
     <%= form.submit %>
