--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= react_component("SampleNavBar") %>
+    <div class='container-fluid'>
+      <%= yield %>
+    </div>
   </body>
 </html>
